fixing more
