# controllers/Sandbox.js
@@ -6,12 +6,12 @@ var url = require('url');
 var Sandbox = require('./SandboxService');
 
 
-module.exports.apiV1BlueprintsBlueprintIdentifierCreateSandboxPost = function apiV1BlueprintsBlueprintIdentifierCreateSandboxPost (req, res, next) {
+module.exports.v1BlueprintsBlueprintIdentifierCreateSandboxPost = function v1BlueprintsBlueprintIdentifierCreateSandboxPost (req, res, next) {
   var blueprintIdentifier = req.swagger.params['blueprint_identifier'].value;
   var body = req.swagger.params['body'].value;
   
 
-  var result = Sandbox.apiV1BlueprintsBlueprintIdentifierCreateSandboxPost(blueprintIdentifier, body);
+  var result = Sandbox.v1BlueprintsBlueprintIdentifierCreateSandboxPost(blueprintIdentifier, body);
 
   if(typeof result !== 'undefined') {
     res.setHeader('Content-Type', 'application/json');
@@ -21,11 +21,11 @@ module.exports.apiV1BlueprintsBlueprintIdentifierCreateSandboxPost = function ap
     res.end();
 };
 
-module.exports.apiV1SandboxesGet = function apiV1SandboxesGet (req, res, next) {
+module.exports.v1SandboxesGet = function v1SandboxesGet (req, res, next) {
   var showHistoric = req.swagger.params['show_historic'].value;
   
 
-  var result = Sandbox.apiV1SandboxesGet(showHistoric);
+  var result = Sandbox.v1SandboxesGet(showHistoric);
 
   if(typeof result !== 'undefined') {
     res.setHeader('Content-Type', 'application/json');
@@ -35,11 +35,11 @@ module.exports.apiV1SandboxesGet = function apiV1SandboxesGet (req, res, next) {
     res.end();
 };
 
-module.exports.apiV1SandboxesIdGet = function apiV1SandboxesIdGet (req, res, next) {
+module.exports.v1SandboxesIdGet = function v1SandboxesIdGet (req, res, next) {
   var id = req.swagger.params['id'].value;
   
 
-  var result = Sandbox.apiV1SandboxesIdGet(id);
+  var result = Sandbox.v1SandboxesIdGet(id);
 
   if(typeof result !== 'undefined') {
     res.setHeader('Content-Type', 'application/json');
@@ -49,11 +49,11 @@ module.exports.apiV1SandboxesIdGet = function apiV1SandboxesIdGet (req, res, nex
     res.end();
 };
 
-module.exports.apiV1SandboxesIdEndPost = function apiV1SandboxesIdEndPost (req, res, next) {
+module.exports.v1SandboxesIdEndPost = function v1SandboxesIdEndPost (req, res, next) {
   var id = req.swagger.params['id'].value;
   
 
-  var result = Sandbox.apiV1SandboxesIdEndPost(id);
+  var result = Sandbox.v1SandboxesIdEndPost(id);
 
   if(typeof result !== 'undefined') {
     res.setHeader('Content-Type', 'application/json');
